--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/inicio_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -16,8 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Registro" />
-        <activity android:name=".InicioSesion"></activity>
+
+        <activity
+            android:name=".Registro"
+            android:label="@string/registro_name"/>
+
+        <activity
+            android:name=".InicioSesion"
+            android:label="@string/iniciar_sesion_name"/>
+
     </application>
 
 </manifest>
